// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`0.0.0-canary.100 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<!-- 
  Copyright (c) Microsoft Corporation.
  Licensed under the MIT License.

  Generated by @rnw-scripts/stamp-version

  This file is stamped with the version of the published react-native-windows
  npm package.
-->
<Project xmlns=\\"http://schemas.microsoft.com/developer/msbuild/2003\\">
  <PropertyGroup>
    <ReactNativeWindowsVersion>0.0.0-canary.100</ReactNativeWindowsVersion>
    <ReactNativeWindowsMajor>0</ReactNativeWindowsMajor>
    <ReactNativeWindowsMinor>0</ReactNativeWindowsMinor>
    <ReactNativeWindowsPatch>0</ReactNativeWindowsPatch>
    <ReactNativeWindowsCanary>true</ReactNativeWindowsCanary>
  </PropertyGroup>
</Project>"
`;

exports[`0.66.5 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<!-- 
  Copyright (c) Microsoft Corporation.
  Licensed under the MIT License.

  Generated by @rnw-scripts/stamp-version

  This file is stamped with the version of the published react-native-windows
  npm package.
-->
<Project xmlns=\\"http://schemas.microsoft.com/developer/msbuild/2003\\">
  <PropertyGroup>
    <ReactNativeWindowsVersion>0.66.5</ReactNativeWindowsVersion>
    <ReactNativeWindowsMajor>0</ReactNativeWindowsMajor>
    <ReactNativeWindowsMinor>66</ReactNativeWindowsMinor>
    <ReactNativeWindowsPatch>5</ReactNativeWindowsPatch>
    <ReactNativeWindowsCanary>false</ReactNativeWindowsCanary>
  </PropertyGroup>
</Project>"
`;

exports[`0.67.0-preview.1 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<!-- 
  Copyright (c) Microsoft Corporation.
  Licensed under the MIT License.

  Generated by @rnw-scripts/stamp-version

  This file is stamped with the version of the published react-native-windows
  npm package.
-->
<Project xmlns=\\"http://schemas.microsoft.com/developer/msbuild/2003\\">
  <PropertyGroup>
    <ReactNativeWindowsVersion>0.67.0-preview.1</ReactNativeWindowsVersion>
    <ReactNativeWindowsMajor>0</ReactNativeWindowsMajor>
    <ReactNativeWindowsMinor>67</ReactNativeWindowsMinor>
    <ReactNativeWindowsPatch>0</ReactNativeWindowsPatch>
    <ReactNativeWindowsCanary>false</ReactNativeWindowsCanary>
  </PropertyGroup>
</Project>"
`;
